[package]
name = "xenon-lexer"
version = "0.1.0"
authors = ["Liam Greenway <lgr33nway@gmail.com>"]
edition = "2024"
description = "The Lexical Analyzer (Lexer) for the Xenon Programming Language."
repository = "https://github.com/ApplePieCodes/xenon-lexer"
license = "Unlicense"
keywords = ['lexer', 'lexing', 'xenon', 'programming-language', 'modular']
categories = ['compilers', 'development-tools', 'parsing', 'text-processing']

[lints.rust]
unsafe_code = "forbid"

[dependencies]